infrastructure/kustomize/kafka/base/schema-registry.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: schema-registry
spec:
  selector:
    matchLabels:
      app: schema-registry
  replicas: 1
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      terminationGracePeriodSeconds: 30
      enableServiceLinks: false #https://github.com/confluentinc/schema-registry/issues/689#issuecomment-824769666
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:7.4.0
          resources:
            limits:
              memory: 6Gi
              cpu: "1"
            requests:
              memory: 1Gi
              cpu: "0.2"
          volumeMounts:
            - name: schema-registry-cm-volume
              mountPath: /etc/kafka/secrets
            - name: jmx-exporter-config
              mountPath: /etc/jmx-exporter
            - name: jmx-agent
              mountPath: /opt/jmx
          livenessProbe:
            httpGet:
              path: /config
              port: 8081
              httpHeaders:
                - name: Authorization
                  value: Basic a2Fma2EtdWk6Q2Fyc29tZUAxMjM0
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /config
              port: 8081
              httpHeaders:
                - name: Authorization
                  value: Basic a2Fma2EtdWk6Q2Fyc29tZUAxMjM0
            initialDelaySeconds: 30
          ports:
            - containerPort: 8081
            - containerPort: 5556
              name: jmx-metrics
      volumes:
        - name: schema-registry-cm-volume
          configMap:
            name: schema-registry-cm
        - name: jmx-exporter-config
          configMap:
            name: schema-registry-jmx-exporter-config
        - name: jmx-agent
          emptyDir: {}
