infrastructure/kustomize/kafka/base/kafka-broker-jmx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-jmx-metrics
  labels:
    app: kafka
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5556"
    prometheus.io/path: "/metrics"
spec:
  ports:
    - name: jmx-metrics
      port: 5556
      targetPort: 5556
  selector:
    app: kafka
