infrastructure/kustomize/kafka/base/kafka-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-internal-0
  labels:
    app: kafka-internal-0
  annotations: 
    networking.gke.io/load-balancer-type: Internal
spec:
  type: LoadBalancer
  ports:
    - port: 9094
      targetPort: 9094
      protocol: TCP
  selector:
    statefulset.kubernetes.io/pod-name: kafka-0
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-internal-1
  labels:
    app: kafka-internal-1
  annotations: 
    networking.gke.io/load-balancer-type: Internal
spec:
  type: LoadBalancer
  ports:
    - port: 9094
      targetPort: 9094
      protocol: TCP
  selector:
    statefulset.kubernetes.io/pod-name: kafka-1
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-internal-2
  labels:
    app: kafka-internal-2
  annotations: 
    networking.gke.io/load-balancer-type: Internal
spec:
  type: LoadBalancer
  ports:
    - port: 9094
      targetPort: 9094
      protocol: TCP
  selector:
    statefulset.kubernetes.io/pod-name: kafka-2
