infrastructure/kustomize/kafka/base/kafka-localhost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-localhost-0
  labels:
    app: kafka-localhost-0
spec:
  ports:
    - port: 9095
      targetPort: 9095
      protocol: TCP
  selector:
    statefulset.kubernetes.io/pod-name: kafka-0
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-localhost-1
  labels:
    app: kafka-localhost-1
spec:
  ports:
    - port: 9095
      targetPort: 9095
      protocol: TCP
  selector:
    statefulset.kubernetes.io/pod-name: kafka-1
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-localhost-2
  labels:
    app: kafka-localhost-2
spec:
  ports:
    - port: 9095
      targetPort: 9095
      protocol: TCP
  selector:
    statefulset.kubernetes.io/pod-name: kafka-2
