infrastructure/kustomize/kafka/base/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 9092
      name: server
    - port: 9094
      name: sasl-plaintext
    - port: 9095
      name: localhost
    - port: 9308
      name: kafka-exporter
    - port: 9100
      name: node-exporter
    - port: 9999
      name: jmx-metrics
  clusterIP: None
  selector:
    app: kafka
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: kafka-0-external
#   annotations:
#     cloud.google.com/load-balancer-type: "External"
#   name: kafka-0-external
# spec:
#   type: LoadBalancer
#   loadBalancerIP: <GCP_IP>
#   ports:
#     - port: 9094
#       targetPort: 9094
#       protocol: TCP
#   selector:
#     # app: kafka
#     statefulset.kubernetes.io/pod-name: kafka-0
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: kafka-1-external
#   annotations:
#     cloud.google.com/load-balancer-type: "External"
#   name: kafka-1-external
# spec:
#   type: LoadBalancer
#   loadBalancerIP: <GCP_IP>
#   ports:
#     - port: 9094
#       targetPort: 9094
#       protocol: TCP
#   selector:
#     # app: kafka
#     statefulset.kubernetes.io/pod-name: kafka-1
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: kafka-2-external
#   annotations:
#     cloud.google.com/load-balancer-type: "External"
#   name: kafka-2-external
# spec:
#   type: LoadBalancer
#   loadBalancerIP: 35.240.128.7
#   ports:
#     - port: 9094
#       targetPort: 9094
#       protocol: TCP
#   selector:
#     # app: kafka
#     statefulset.kubernetes.io/pod-name: kafka-2
