infrastructure/kustomize/kafka/base/kafka-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-ui
  annotations:
    cloud.google.com/load-balancer-type: "External"
  name: kafka-ui
spec:
  type: ClusterIP
  # loadBalancerIP: <GCP_IP>
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: kafka-ui
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-ui
spec:
  selector:
    matchLabels:
      app: kafka-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui
          resources:
            limits:
              memory: 5Gi
              cpu: "1"
            requests:
              memory: 512Mi
              cpu: "0.2"
