infrastructure/kustomize/kafka/base/schema-registry-service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: schema-registry-metrics
  labels:
    app: schema-registry
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5556"
    prometheus.io/path: "/metrics"
spec:
  ports:
    - name: jmx-metrics
      port: 5556
  selector:
    app: schema-registry
