infrastructure/kustomize/kafka/base/schema-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  labels:
    app: schema-registry
  annotations: 
    networking.gke.io/load-balancer-type: Internal
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: schema-registry
  selector:
    app: schema-registry
