infrastructure/kustomize/kafka/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-schema-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "kafka-schema-acme-dev"
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: "cert-kafka-schema"
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: schema-registry
              port: 
                number: 8081
